--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,8 @@
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
+			<version>1.18.30</version> <!-- ή ό,τι πιο πρόσφατο -->
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
